--- a/src/weatherApp_CSS.css
+++ b/src/weatherApp_CSS.css
@@ -86,6 +86,21 @@ p {
   color: #f65281;
   font-weight: bold;
 }
+.weather-forecast {
+  margin-top: 15px;
+  text-align: center;
+  color: black;
+}
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+.weather-forecast-temperatures {
+  font-size: 13px;
+}
+.weather-forecast-min-temperature {
+  opacity: 0.5;
+}
 footer p {
   text-align: center;
   color: rgba(39, 33, 66, 0.4);
