created new getForecast function in order to get the city's forecast. Moved the call function "getForecast()" into displayTemperature, as this is where API Integration will happen.

--- a/src/weatherApp_CSS.css
+++ b/src/weatherApp_CSS.css
@@ -106,7 +106,11 @@ p {
   opacity: 0.5;
 }
 .weather-forecast-icon {
+  margin-top: 8px;
   font-size: 30px;
+}
+.weather-forecast-temperatures {
+  margin-top: 8px;
 }
 footer p {
   text-align: center;
