--- a/src/weatherApp_CSS.css
+++ b/src/weatherApp_CSS.css
@@ -1,4 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
 body {
+  width: 100%;
+  height: 100%;
   background-color: #f9f7fd;
   font-family: "Roboto", sans-serif;
 }
@@ -123,4 +132,13 @@ footer p {
 }
 footer a {
   color: #f65281;
+}
+.spacer {
+  aspect-ratio: 960/300;
+  width: 100%;
+  background-image: url("./layered-waves-haikei.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-bottom: 0;
 }
